- Styling: fixed person profile toggle for dark mode.

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -17558,12 +17558,68 @@ iframe.file-browser {
   content: "Deceased";
 }
 
-.card-profile-bio-condensed .person-name {
+.card-profile-bio.card-profile-bio-condensed {
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+  margin: 0;
+}
+.card-profile-bio.card-profile-bio-condensed .protection-profile {
+  padding: 14px 18px;
+}
+.card-profile-bio.card-profile-bio-condensed .profile-image {
+  position: relative;
+  flex-shrink: 0;
+  width: 25%;
+  height: 100%;
+}
+.card-profile-bio.card-profile-bio-condensed .profile-image img {
+  border-radius: var(--rounded-normal) 0 0 var(--rounded-normal);
+}
+.card-profile-bio.card-profile-bio-condensed .profile-data {
+  width: 75%;
+  padding: 14px 18px;
+}
+.card-profile-bio.card-profile-bio-condensed .person-name {
+  margin: 0;
   overflow: hidden;
   font-size: 24px;
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.card-profile-bio.card-profile-bio-condensed .dropdown {
+  padding-right: 32px;
+}
+.card-profile-bio.card-profile-bio-condensed .profile-toggle {
+  position: relative;
+  z-index: 1;
+  display: inline-flex;
+  align-items: center;
+  padding: 0 var(--spacing-tiny);
+  color: var(--color-interface-stronger) !important;
+}
+.card-profile-bio.card-profile-bio-condensed .profile-toggle::after {
+  position: absolute;
+  top: -4px;
+  right: -4px;
+  bottom: -4px;
+  left: -4px;
+  z-index: -1;
+  content: "";
+  background: var(--color-interface-soft);
+  border-radius: 4px;
+  opacity: 0;
+}
+.card-profile-bio.card-profile-bio-condensed .profile-toggle .person-name {
+  flex: 1 1 auto;
+}
+.card-profile-bio.card-profile-bio-condensed .profile-toggle .dropdown-icon {
+  margin: 0 4px 0 12px;
+}
+.card-profile-bio.card-profile-bio-condensed .profile-toggle:hover::after,
+.card-profile-bio.card-profile-bio-condensed .open .profile-toggle::after {
+  opacity: 1;
 }
 
 .profile-toggle {
@@ -17576,7 +17632,7 @@ iframe.file-browser {
 
 .profile-toggle:hover {
   color: var(--color-interface-strong);
-  background: #eee;
+  background-color: var(--color-interface-softer);
 }
 
 .rockbadge-assessment a {
@@ -33588,65 +33644,6 @@ body.navbar-side-open {
 .panel .panel-heading .panel-options button {
   background-color: transparent;
   box-shadow: none;
-}
-
-.card-profile-bio-condensed {
-  flex-direction: row;
-  align-items: center;
-  height: 100%;
-  margin: 0;
-}
-.card-profile-bio-condensed .protection-profile {
-  padding: 14px 18px;
-}
-.card-profile-bio-condensed .profile-image {
-  position: relative;
-  flex-shrink: 0;
-  width: 25%;
-  height: 100%;
-}
-.card-profile-bio-condensed .profile-image img {
-  border-radius: var(--rounded-normal) 0 0 var(--rounded-normal);
-}
-.card-profile-bio-condensed .profile-data {
-  width: 75%;
-  padding: 14px 18px;
-}
-.card-profile-bio-condensed .person-name {
-  margin: 0;
-}
-.card-profile-bio-condensed .dropdown {
-  padding-right: 32px;
-}
-.card-profile-bio-condensed .profile-toggle {
-  position: relative;
-  z-index: 1;
-  display: inline-flex;
-  align-items: center;
-  padding: 0;
-  color: var(--color-interface-stronger) !important;
-}
-.card-profile-bio-condensed .profile-toggle::after {
-  position: absolute;
-  top: -4px;
-  right: -4px;
-  bottom: -4px;
-  left: -4px;
-  z-index: -1;
-  content: "";
-  background: #eee;
-  border-radius: 4px;
-  opacity: 0;
-}
-.card-profile-bio-condensed .profile-toggle .person-name {
-  flex: 1 1 auto;
-}
-.card-profile-bio-condensed .profile-toggle .dropdown-icon {
-  margin: 0 4px 0 12px;
-}
-.card-profile-bio-condensed .profile-toggle:hover::after,
-.card-profile-bio-condensed .open .profile-toggle::after {
-  opacity: 1;
 }
 
 @media (max-width: 992px) {
